# binum

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/euclidean-gcd/: Cargo.toml
examples/euclidean-gcd/src/: main.rs
src/: boolean.rs  lib.rs  main.rs  num.rs  uint.rs
tests/: bool_basics.rs  uint_basics.rs  uint_cmp.rs  uint_ops.rs  uint_ops_bit.rs  uint_ops_int.rs
